# rat

./: .gitignore  LICENSE  README.md  chatspec  conf.ini  issues  philosophy  run_rat.sh  temp  todo
cpp/: CMakeLists.txt  main.cpp  test.cpp
deploy/: rat  rat.service
deploy/raspbian/: 000-default.conf  checkout.sh  install.sh  reinstall.sh
deploy/raspbian/res/: 000-default.conf  apache-404.conf.filter  apache-404.conf.jail  apache.conf.jail  honeypot.conf  rat  rat.service
deploy/raspbian/res/apache2/: 000-default.conf  default-ssl.conf
deploy/raspbian/res/f2b/: 404.local  adminpanels.conf  adminpanels.local  envleak.conf  envleak.local  git.conf  git.local  honeypot.local  modsec-deny.conf  modsec-deny.local  modsec-scanners.conf  modsec-scanners.local  recidive.local  ssh-keys.conf  ssh-keys.local
deploy/raspbian/res/systemd/: rat-listen.service
doc/: chatbox.html.txt  chatspec  design-phylosophy  file  issues  keys-todo.txt  name  protocol  security
python/: bot.py  cam.py  conf.py  crypto.py  dev.sh  name.py  nameserver.py  pack.py  port.py  prompt.py  protocol.py  rat.py  requirements.txt  sock.py  video.py
python/impl/: audio.py  bot.py  conf.py  crypto.py  sock.py  video.py
python/prot/: audio.py  chat.py  handshake.py  media.py  name.py  protocol.py  video.py
srv/: index.php  style.css
util/: f2b_status.sh  git.sh  nag.sh  nmap.sh  plot.py  profile.sh
